# shader_template

./: .cproject  .directory  .gitignore  .project  CMakeLists.txt  README.md
CMake/: FindLibEpoxy.cmake
Debug/: makefile  objects.mk  shader_test
Debug/src/: subdir.mk
glsl/: test,vert  test.frag  test.geom  test.vert  voxel.frag  voxel.vert
src/: config.h.in  main.cpp  test.cpp  vertex.h
src/buffer/: Buffer.h  Octree.cpp  Octree.h
src/components/: BufferSet.cpp  BufferSet.h  Camera.cpp  Camera.h  Component.cpp  Component.h
src/control/: Arcball.cpp  Arcball.h
src/io/: OBJLoader.cpp  OBJLoader.h
src/pipeline/: Pipeline.cpp  Pipeline.h
src/shader/: Buffer.h  Shader.cpp  Shader.h  program.cpp
